--- a/src/locale/de/description.properties
+++ b/src/locale/de/description.properties
@@ -2,5 +2,5 @@ extensions.{appid}.description={appdescription}.
 
 allDeactivatedMessage = Alle Addons wurden deaktiviert, bitte starten Sie Firefox neu!
 allActivatedMessage = Alle Addons wurden aktiviert, bitte starten Sie Firefox neu!
-executeActionMessage = Aktion wurde ausgef\u00fchrt, bitte starten Sie Firefox neu!
+executeActionMessage = De-/Aktivierung wurde ausgef\u00fchrt, bitte starten Sie Firefox neu!
 restartFirefoxMessage = M\u00f6chten Sie Firefox wirklich neustarten?
