--- a/src/locale/de/options.dtd
+++ b/src/locale/de/options.dtd
@@ -1,7 +1,6 @@
 <!ENTITY preferences.title "M.A.D. Optionen">
-<!ENTITY checkbox.label 'Wenn diese Option aktiviert ist,
-                         dann wird beim Klick auf "Alle deaktivieren",
-                         M.A.D. ausgeschlossen.'>
+<!ENTITY checkbox.label 'M.A.D. wird von der Deaktivierung ausgeschlossen,
+                         wenn diese Option aktiviert ist.'>
 <!ENTITY legend.label "Legende:">
 <!ENTITY disabledAddon.label " - deaktiviertes Add-on">
 <!ENTITY incompatibleAddon.label " - inkompatibles Add-on">
