--- a/src/locale/de/description.properties
+++ b/src/locale/de/description.properties
@@ -1,4 +1,4 @@
-extensions.{appid}.description={appdescription}.
+extensions.multiple-addon-deactivator.{appid}.description={appdescription}.
 
 allDeactivatedMessage = Alle Addons wurden deaktiviert, bitte starten Sie Firefox neu!
 allActivatedMessage = Alle Addons wurden aktiviert, bitte starten Sie Firefox neu!
