--- a/src/locale/en-US/description.properties
+++ b/src/locale/en-US/description.properties
@@ -1,4 +1,4 @@
-extensions.{appid}.description={appdescription}.
+extensions.multiple-addon-deactivator.{appid}.description={appdescription}.
 
 allDeactivatedMessage = All extensions has been deactivated, please restart your Firefox!
 allActivatedMessage = All extensions has been activated, please restart your Firefox!
