--- a/src/locale/de/description.properties
+++ b/src/locale/de/description.properties
@@ -1,6 +1,6 @@
 extensions.multiple-addon-deactivator.{appid}.description={appdescription}.
 
-allDeactivatedMessage = Alle Addons wurden deaktiviert, bitte starten Sie Firefox neu!
-allActivatedMessage = Alle Addons wurden aktiviert, bitte starten Sie Firefox neu!
-executeActionMessage = De-/Aktivierung wurde ausgef\u00fchrt, bitte starten Sie Firefox neu!
-restartFirefoxMessage = M\u00f6chten Sie Firefox wirklich neustarten?
+allDeactivatedMessage = Alle Addons wurden deaktiviert, bitte starten Sie die Anwendung neu!
+allActivatedMessage = Alle Addons wurden aktiviert, bitte starten Sie die Anwendung neu!
+executeActionMessage = De-/Aktivierung wurde ausgef\u00fchrt, bitte starten Sie die Anwendung neu!
+restartFirefoxMessage = M\u00f6chten Sie die Anwendung wirklich neustarten?
