--- a/src/locale/en-US/description.properties
+++ b/src/locale/en-US/description.properties
@@ -1,6 +1,6 @@
 extensions.multiple-addon-deactivator.{appid}.description={appdescription}.
 
-allDeactivatedMessage = All extensions has been deactivated, please restart your Firefox!
-allActivatedMessage = All extensions has been activated, please restart your Firefox!
-executeActionMessage = De-/Activation has been exectued, please restart your Firefox!
-restartFirefoxMessage = Do you really want to restart Firefox?
+allDeactivatedMessage = All extensions has been deactivated, please restart your application!
+allActivatedMessage = All extensions has been activated, please restart your application!
+executeActionMessage = De-/Activation has been exectued, please restart your application!
+restartFirefoxMessage = Do you really want to restart your application?
