--- a/src/locale/sv-SE/description.properties
+++ b/src/locale/sv-SE/description.properties
@@ -1,6 +1,6 @@
-extensions.ChrisLE@mozilla.org.description=Multiple Addon Deactivator (M.A.D) kan aktivera/inaktivera ett, flera eller samtliga tillägg på samma gång.
+extensions.multiple-addon-deactivator.{appid}.description=Multiple Addon Deactivator (M.A.D.) kan aktivera/inaktivera ett, flera eller samtliga till\u00c3\u00a4gg p\u00c3\u00a5 samma g\u00c3\u00a5ng.
 
-allDeactivatedMessage = Alla tillägg har inaktiverats, var vänlig starta om Firefox!
-allActivatedMessage = Alla tillägg har aktiverats, var vänlig starta om Firefox!
-executeActionMessage = Åtgärden har utförts, var vänlig starta om Firefox!
-restartFirefoxMessage = Vill du verkligen starta om Firefox?
+allDeactivatedMessage = Alla till\u00c3\u00a4gg har inaktiverats, var v\u00c3\u00a4nlig starta om program!
+allActivatedMessage = Alla till\u00c3\u00a4gg har aktiverats, var v\u00c3\u00a4nlig starta om program!
+executeActionMessage = \u00c3\u0085tg\u00c3\u00a4rden har utf\u00c3\u00b6rts, var v\u00c3\u00a4nlig starta om program!
+restartFirefoxMessage = Vill du verkligen starta om program?
