--- a/src/locale/sv-SE/options.dtd
+++ b/src/locale/sv-SE/options.dtd
@@ -4,4 +4,4 @@
                          du klickar på &quot;Inaktivera alla&quot;">
 <!ENTITY legend.label "förklaring:">
 <!ENTITY disabledAddon.label " - inaktiverat tillägg">
-<!ENTITY incompatibleAddon.label " - inkompatibelt med aktuell Firefox-version">
+<!ENTITY incompatibleAddon.label " - inkompatibelt med aktuell program-version">
