--- a/src/locale/de/window.dtd
+++ b/src/locale/de/window.dtd
@@ -10,7 +10,7 @@
 <!ENTITY total.label "Gesamt">
 <!ENTITY name.label "Name">
 <!ENTITY version.label "Version">
-<!ENTITY activatedButton.label "Alle deaktivieren">
-<!ENTITY deactivatedButton.label "Alle aktivieren">
+<!ENTITY deactivatedButton.label "Alle deaktivieren">
+<!ENTITY activatedButton.label "Alle aktivieren">
 <!ENTITY actionButton.label "Markierte Add-ons de-/aktivieren">
 <!ENTITY restartButton.label "&brandShortName; neustarten">
