--- a/src/locale/en-US/description.properties
+++ b/src/locale/en-US/description.properties
@@ -2,5 +2,5 @@ extensions.multiple-addon-deactivator.{appid}.description={appdescription}.
 
 allDeactivatedMessage = All extensions has been deactivated, please restart your application!
 allActivatedMessage = All extensions has been activated, please restart your application!
-executeActionMessage = De-/Activation has been exectued, please restart your application!
+executeActionMessage = De-/Activation has been executed, please restart your application!
 restartFirefoxMessage = Do you really want to restart your application?
