--- a/src/locale/sv-SE/window.dtd
+++ b/src/locale/sv-SE/window.dtd
@@ -10,6 +10,8 @@
 <!ENTITY total.label "Totalt">
 <!ENTITY name.label "Namn">
 <!ENTITY version.label "Version">
+<!ENTITY checkAllActivated.label "Alla aktiverade">
+<!ENTITY checkAllDeactivated.label "Alla avaktiveras">
 <!ENTITY deactivatedButton.label "Inaktivera alla">
 <!ENTITY activatedButton.label "Aktivera alla">
 <!ENTITY actionButton.label "Utför åtgärden för markerade tillägg">
