Ver 1.6 Some code revision Feature added: check all activated and deactivated add-ons

--- a/src/locale/de/window.dtd
+++ b/src/locale/de/window.dtd
@@ -10,8 +10,8 @@
 <!ENTITY total.label "Gesamt">
 <!ENTITY name.label "Name">
 <!ENTITY version.label "Version">
-<!ENTITY checkAllActivated.label "Alle aktivierten">
-<!ENTITY checkAllDeactivated.label "Alle deaktivierten">
+<!ENTITY checkAllActivated.label "Aktivierte auswählen">
+<!ENTITY checkAllDeactivated.label "Deaktivierte auswählen">
 <!ENTITY deactivatedButton.label "Alle deaktivieren">
 <!ENTITY activatedButton.label "Alle aktivieren">
 <!ENTITY actionButton.label "Markierte Add-ons de-/aktivieren">
