--- a/src/locale/sv-SE/window.dtd
+++ b/src/locale/sv-SE/window.dtd
@@ -10,8 +10,8 @@
 <!ENTITY total.label "Totalt">
 <!ENTITY name.label "Namn">
 <!ENTITY version.label "Version">
-<!ENTITY checkAllActivated.label "Alla aktiverade">
-<!ENTITY checkAllDeactivated.label "Alla avaktiveras">
+<!ENTITY checkAllActivated.label "Markera endast aktiverade">
+<!ENTITY checkAllDeactivated.label "Markera endast inaktiverade">
 <!ENTITY deactivatedButton.label "Inaktivera alla">
 <!ENTITY activatedButton.label "Aktivera alla">
 <!ENTITY actionButton.label "Utför åtgärden för markerade tillägg">
