Ver 1.6 Some code revision Feature added: check all activated and deactivated add-ons Add version into the titlebar

--- a/src/locale/de/window.dtd
+++ b/src/locale/de/window.dtd
@@ -2,7 +2,7 @@
 %brandDTD;
 
 <!-- Fensterdaten //-->
-<!ENTITY title.label "{appdisplayname}">
+<!ENTITY title.label "{appdisplayname} {appversion}">
 
 <!-- Anwendungsdaten //-->
 <!ENTITY activated.label "Aktviert">
