Added counter and icon for restartless add-ons and counter for incompatible add-ons.

--- a/src/locale/de/options.dtd
+++ b/src/locale/de/options.dtd
@@ -5,3 +5,4 @@
 <!ENTITY activatedAddon.label " - aktiviertes Add-on">
 <!ENTITY deactivatedAddon.label " - deaktiviertes Add-on">
 <!ENTITY incompatibleAddon.label " - inkompatibles Add-on">
+<!ENTITY restartlessAddon.label " - aktiviertes Add-on (Kein Neustart)">
