--- a/src/locale/en-US/window.dtd
+++ b/src/locale/en-US/window.dtd
@@ -14,6 +14,8 @@
 <!ENTITY version.label "Version">
 <!ENTITY checkAllActivated.label "Select only activated">
 <!ENTITY checkAllDeactivated.label "Select only deactivated">
+<!ENTITY checkAllActivatedRestartless.label "Select only activated (restartless)">
+<!ENTITY checkAllDeactivatedRestartless.label "Select only deactivated (restartless)">
 <!ENTITY deactivatedButton.label "Deactivate all">
 <!ENTITY activatedButton.label "Activate all">
 <!ENTITY actionButton.label "De-/Activate checked add-ons">
